--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,7 +15,7 @@ html {
     font-size: 1rem;
 }
 
-.button, #reset {
+.button, #reset, #rate, #save {
     background-color: $buttonColor;
 	border-radius: 10px;
 	outline: none;
@@ -49,7 +49,7 @@ html {
 }
 
 .topButton {
-    width: 3rem;
+    width: 2rem;
     cursor: pointer;
 }
 
@@ -86,9 +86,14 @@ html {
 }
 #reset{
   width: 11.5rem;
-  margin-top: 4rem;
-  height: 3rem !important;
+  margin-top: 1rem;
+  height: 3.5rem !important;
 }
+#rate{
+    width: 14.5rem;
+    margin-top: 1rem;
+    height: 3.5rem !important;
+  }
 #language {
   width: 7rem;
   height: 1.8rem;
@@ -96,4 +101,6 @@ html {
 }
 #save {
   width: 8rem;
+  height: 2.8rem;
+  margin-top: 2.5rem;
 }
