--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,4 +1,11 @@
-$primary: #af6f56;
+$mainBackground: #1a1c1e;
+$secondBackground: #2a343c;
+$primary: #cbe5ff;
+$secondary: #eedcff;
+$third: #6761A8;
+$fourth: #009B72;
+
+$font: #94a8bd;
 
 $white: #e4e7ea;
 $mainBackground: rgb(0, 8, 9);
