--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -6,9 +6,9 @@ $third: #6761A8;
 $fourth: #009B72;
 
 $font: #94a8bd;
+$placeholder: #778ea3;
 
 $white: #e4e7ea;
-$mainBackground: rgb(0, 8, 9);
 $navcolor: #1a1a1a;
 $calculatorColor: rgb(0, 17, 19);
 $buttonColor: rgb(0, 35, 40);
