removed old settings icon

--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -28,6 +28,10 @@
     margin-top: 5rem !important;
 }
 
+.mt-wrapper {
+    margin-top: 5.3rem !important;
+}
+
 .is-text-center {
     text-align: center;
 }
